src/objects/Location__c.object
<CustomObject>
    <description>Anagrafica Store con informazioni legal entity</description>
    <fields>
        <fullName>Area_MTM__c</fullName>
        <label>Area MTM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area_MTM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_Legal_Entity__c</fullName>
        <label>Città Legal Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta__c</fullName>
        <label>Città</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Postale_Legal_Entity__c</fullName>
        <label>Codice Postale Legal Entity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Postale__c</fullName>
        <label>Codice Postale</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Chiusura_Negozio__c</fullName>
        <label>Data Chiusura Negozio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Legal_Entity__c</fullName>
        <label>Email Legal Entity</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Test_MC__c</fullName>
        <label>Email Test MC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Legal_Entity__c</fullName>
        <label>Fax Legal Entity</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Geolocalizzazione__c</fullName>
        <label>Geolocalizzazione</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Id_Location_Micros__c</fullName>
        <label>Id Location Micros</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <externalId>true</externalId>
        <label>Id Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inattivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inattivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirizzo_Legal_Entity_1__c</fullName>
        <label>Indirizzo Legal Entity 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_Legal_Entity_2__c</fullName>
        <label>Indirizzo Legal Entity 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_Legal_Entity__c</fullName>
        <formula>Indirizzo_Legal_Entity_1__c &amp;&quot; &quot;&amp; Indirizzo_Legal_Entity_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirizzo Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazione_Legal_Entity__c</fullName>
        <label>Nazione Legal Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazione__c</fullName>
        <label>Nazione</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_legal_entity__c</fullName>
        <label>Nome legal entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orari_Apertura__c</fullName>
        <label>Orari Apertura</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Orari_Chiusura__c</fullName>
        <label>Orari Chiusura</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partita_iva_Legal_entity__c</fullName>
        <label>Partita iva Legal entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia_Legal_Entity__c</fullName>
        <label>Provincia Legal Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <label>Provincia</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Manager_Test_MC__c</fullName>
        <label>Store Manager Test MC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Manager__c</fullName>
        <label>Store Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Telefono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_3__c</fullName>
        <label>Telefono 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_Legal_Entity__c</fullName>
        <label>Telefono Legal Entity</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Telefono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_Store__c</fullName>
        <label>Tipo Store</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>DOS</fullName>
                </value>
                <value>
                    <fullName>Franchising</fullName>
                </value>
                <value>
                    <fullName>Magazzino</fullName>
                </value>
                <value>
                    <fullName>Multimarca</fullName>
                </value>
                <value>
                    <fullName>Showroom</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Id_Location__c</columns>
        <columns>Id_Location_Micros__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Tipo_Store__c</columns>
        <columns>Id_Location_Micros__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>Area__c</columns>
        <columns>Id_Location_Micros__c</columns>
        <columns>Id_Location__c</columns>
        <columns>NAME</columns>
        <columns>Indirizzo__c</columns>
        <columns>Citta__c</columns>
        <columns>Codice_Postale__c</columns>
        <columns>Nazione__c</columns>
        <columns>Email__c</columns>
        <columns>Telefono__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>